--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>My Blog</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -12,29 +12,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: 'My Blog',
+      repo: '',
+      loadSidebar: true
     }
   </script>
   <!-- Docsify v4 -->
-  <script>
-  window.$docsify = {
-    name: '',
-    repo: '',
-    loadSidebar: true,
-    auto2top: true,
-    subMaxLevel: 2,
-    search: {
-      noData: {
-        '/': 'No results!',
-      },
-      paths: ['/', '/readme.md', '/my_first_page.md']
-    },
-    alias: {
-      '/.*/_sidebar.md': '/_sidebar.md'
-    }
-  }
-</script>
-
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
 </body>
 </html>
